workspace(name = "graphflowdb")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_jar")

# GTest
git_repository(
    name = "gtest",
    commit = "a4ab0abb93620ce26efad9de9296b73b16e88588",
    remote = "https://github.com/google/googletest.git",
    shallow_since = "1599779370 -0400",
)

# Logger
http_archive(
    name = "gabime_spdlog",
    build_file = "gabime_spdlog.BUILD.bazel",
    sha256 = "eed0095a1d52d08a0834feda146d4f9148fa4125620cd04d8ea57e0238fa39cd",
    strip_prefix = "spdlog-1.8.1/include",
    url = "https://github.com/gabime/spdlog/archive/v1.8.1.zip",
)

# JSON parser
http_archive(
    name = "nlohmann_json",
    build_file = "nlohmann_json.BUILD.bazel",
    sha256 = "b94997df68856753b72f0d7a3703b7d484d4745c567f3584ef97c96c25a5798e",
    strip_prefix = "single_include",
    url = "https://github.com/nlohmann/json/releases/download/v3.10.5/include.zip",
)

# Command-line parser
http_archive(
    name = "Taywee_args",
    build_file = "Taywee_args.BUILD.bazel",
    sha256 = "1a1c8846acd2d117843f6ab13518cac78bd0f8dcde8531603ac6f2115c9582d6",
    strip_prefix = "args-6.2.2",
    url = "https://github.com/Taywee/args/archive/6.2.2.zip",
)

###########################################################
#antlr4_tools
http_jar(
    name = "antlr4-complete",
    sha256 = "bd11b2464bc8aee5f51b119dff617101b77fa729540ee7f08241a6a672e6bc81",
    url = "https://www.antlr.org/download/antlr-4.9-complete.jar",
)

# antlr4_runtimes
http_archive(
    name = "antlr4_runtimes",
    build_file = "antlr4_runtimes.BUILD.bazel",
    sha256 = "db170179917ce6fec7bc4ecf72edba36b97c9881e09e03af6ac0c901eba52a8f",
    strip_prefix = "antlr4-4.9.1",
    url = "https://github.com/antlr/antlr4/archive/4.9.1.tar.gz",
)

###########################################################
# pybind11 bazel rules
http_archive(
    name = "pybind11_bazel",
    strip_prefix = "pybind11_bazel-26973c0ff320cb4b39e45bc3e4297b82bc3a6c09",
    urls = ["https://github.com/pybind/pybind11_bazel/archive/26973c0ff320cb4b39e45bc3e4297b82bc3a6c09.zip"],
)

# pybind11
http_archive(
    name = "pybind11",
    build_file = "@pybind11_bazel//:pybind11.BUILD",
    sha256 = "c2ed3fc84db08f40a36ce1d03331624ed6977497b35dfed36a1423396928559a",
    strip_prefix = "pybind11-2.6.0",
    urls = ["https://github.com/pybind/pybind11/archive/v2.6.0.zip"],
)

load("@pybind11_bazel//:python_configure.bzl", "python_configure")

python_configure(
    name = "local_config_python",
    python_version = "3",
)

###########################################################
http_archive(
    name = "rules_python",
    sha256 = "9fcf91dbcc31fde6d1edb15f117246d912c33c36f44cf681976bd886538deba6",
    strip_prefix = "rules_python-0.8.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.8.0.tar.gz",
)
