filegroup(
    name = "dataset",
    srcs = glob([
        "hash-index-test/**",
        "loader-fault-tests/**",
        "loader-empty-lists-test/**",
        "loader-node-property-test/**",
        "loader-special-char-test/**",
        "node-insertion-deletion-tests/**",
        "order-by-tests/**",
        "read-list-tests/**",
        "tinysnb/**",
        "tinysnb-variant/**",
        "unstructured-property-lists-updates-tests/**",
    ]),
    visibility = ["//visibility:public"],
)
