filegroup(
    name = "dataset",
    srcs = glob([
        "empty-db/**",
        "hash-index-test/**",
        "copy-csv-fault-tests/**",
        "copy-csv-empty-lists-test/**",
        "copy-csv-node-property-test/**",
        "copy-csv-special-char-test/**",
        "node-insertion-deletion-tests/**",
        "non-empty-disk-array-db/**",
        "order-by-tests/**",
        "read-list-tests/**",
        "tinysnb/**",
        "tinysnb-variant/**",
        "unstructured-property-lists-updates-tests/**",
        "rel-insertion-tests/**",
    ]),
    visibility = ["//visibility:public"],
)
