filegroup(
    name = "dataset",
    srcs = glob([
        "empty-db/**",
        "copy-csv-fault-tests/**",
        "copy-csv-empty-lists-test/**",
        "copy-csv-dos-style-newline/**",
        "copy-csv-node-property-test/**",
        "copy-csv-special-char-test/**",
        "hash-index-test/**",
        "long-string-pk-tests/**",
        "node-insertion-deletion-tests/**",
        "non-empty-disk-array-db/**",
        "order-by-tests/**",
        "primary-key-tests/**",
        "read-list-tests/**",
        "tinysnb/**",
        "tinysnb-variant/**",
        "unstructured-property-lists-updates-tests/**",
        "rel-insertion-tests/**",
        "demo-db/**",
        "copy-csv-arrow-node-test/**",
    ]),
    visibility = ["//visibility:public"],
)
