load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    linkopts = ["-lpthread"],
    deps = [
        "//src/loader:graph_loader",
        "//src/main:graphflowdb",
        "//tools/join_order_pick:jo_connection",
    ],
)
